network-policy.cilium-health.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-health
spec:
  endpointSelector:
    matchLabels:
      'reserved:health': ''
  ingress:
    - fromEntities:
      - host
      - remote-node
      - world
      # TODO:
      # remove world entity after v1.10.0 release
      # see https://github.com/cilium/cilium/pull/15148
  egress:
    - toEntities:
      - host
      - remote-node
      - world
      # TODO:
      # remove world entity after v1.10.0 release
      # see https://github.com/cilium/cilium/pull/15148
